--- a/ao_flutter_oauth2/pubspec.yaml
+++ b/ao_flutter_oauth2/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_auth: ^3.3.18
   google_sign_in: ^5.3.2
   flutter_facebook_auth: ^4.3.4
+  the_apple_sign_in: ^1.1.1
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
